Resolved Errors & Updated Connection
Worked through a bunch of warnings and errors. Updated error handling since the program wouldn't run if there were no User Preferences set. Updated ConnectWdw for Save/Clear buttons. Clear button now clears and saves the blank settings. Removed the icon for the updates since this isn't working in JAR files. Updated Connect function to restart the app to refresh the new user preferences, but now have the issue of TWO windows.